--- a/web/index.html
+++ b/web/index.html
@@ -33,10 +33,32 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+<!--  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>-->
+<!--  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>-->
+<!--  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>-->
+<!--  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>-->
+
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
+
+  <script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+var firebaseConfig = {
+  apiKey: "AIzaSyB8B2KyyuWP_dCT95GjnGLllfxF4cddDz0",
+  authDomain: "hostelmanagement-26b47.firebaseapp.com",
+  projectId: "hostelmanagement-26b47",
+  storageBucket: "hostelmanagement-26b47.appspot.com",
+  messagingSenderId: "785997474996",
+  appId: "1:785997474996:web:af86b5ddd0a84e8cb1fbe1",
+  measurementId: "G-48RN672VZ9"
+};
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
